--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "fs": "0.0.1-security",
     "lodash": "^3.10.1",
     "mocha": "^5.2.0",
+    "path": "^0.12.7",
     "prettier": "^2.0.4",
     "rollup": "^2.6.1",
     "rollup-plugin-buble": "^0.19.8",
@@ -59,10 +61,13 @@
     "rollup-plugin-nodent": "^0.2.2",
     "rollup-plugin-screeps": "^1.0.0",
     "rollup-plugin-typescript2": "^0.27.0",
+    "screeps-api": "^1.12.1",
     "sinon": "^6.3.5",
     "sinon-chai": "^3.2.0",
     "ts-node": "^8.8.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "util": "^0.12.3",
+    "yamljs": "^0.3.0"
   },
   "dependencies": {
     "source-map": "~0.6.1"
