--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "push-main": "rollup -c --environment DEST:main",
     "push-pserver": "rollup -c --environment DEST:pserver",
     "push-sim": "rollup -c --environment DEST:sim",
+    "push-s+2": "rollup -c --environment DEST:ScreepsPlus-sseason-server",
     "test": "npm run test-unit",
     "test-unit": "rollup -c rollup.test-unit-config.js && mocha dist/test-unit.bundle.js",
     "test-integration": "echo 'See docs/in-depth/testing.md for instructions on enabling integration tests'",
