--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-nodent": "^0.2.2",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-screeps": "^1.0.0",
     "rollup-plugin-typescript2": "^0.27.0",
     "screeps-api": "^1.12.1",
